Add LocalStack support

--- a/index.html
+++ b/index.html
@@ -1389,11 +1389,20 @@
                                 </div>
                                 <br />
                                 <div class="form-group">
-                                    <h5>Irrelevant Resources&nbsp;<span data-tippy-content="Experimental"><i class="fa fa-warning" style="color: #f29824;"></i></span></h5>
+                                    <h5>Irrelevant Resources</h5>
                                     <p>When enabled, this setting will skip resources considered irrelevant (currently only CloudWatch Log Streams):</p>
                                     <div class="checkbox-toggle">
                                         <input type="checkbox" id="skipirrelevantresources">
                                         <label for="skipirrelevantresources">Skip Irrelevant Resources</label>
+                                    </div>
+                                </div>
+                                <br />
+                                <div class="form-group">
+                                    <h5>Custom Endpoints&nbsp;<span data-tippy-content="Experimental"><i class="fa fa-warning" style="color: #f29824;"></i></span></h5>
+                                    <p>When enabled, this setting will use the LocalStack endpoint (localhost:4566):</p>
+                                    <div class="checkbox-toggle">
+                                        <input type="checkbox" id="uselocalstackendpoint">
+                                        <label for="uselocalstackendpoint">Use LocalStack Endpoint</label>
                                     </div>
                                 </div>
                             </div>
