--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
                                         <a class="dropdown-item region-item" data-region="ap-southeast-4">Asia Pacific (Melbourne)</a>
                                         <a class="dropdown-item region-item" data-region="ap-northeast-1">Asia Pacific (Tokyo)</a>
                                         <a class="dropdown-item region-item" data-region="ca-central-1">Canada (Central)</a>
+                                        <a class="dropdown-item region-item" data-region="ca-west-1">Canada West (Calgary)</a>
                                         <a class="dropdown-item region-item" data-region="eu-central-1">EU (Frankfurt)</a>
                                         <a class="dropdown-item region-item" data-region="eu-central-2">EU (Zurich)</a>
                                         <a class="dropdown-item region-item" data-region="eu-west-1">EU (Ireland)</a>
@@ -168,6 +169,7 @@
                                         <a class="dropdown-item region-item" data-region="eu-south-2">EU (Spain)</a>
                                         <a class="dropdown-item region-item" data-region="eu-west-3">EU (Paris)</a>
                                         <a class="dropdown-item region-item" data-region="eu-north-1">EU (Stockholm)</a>
+                                        <a class="dropdown-item region-item" data-region="il-central-1">Israel (Tel Aviv)</a>
                                         <a class="dropdown-item region-item" data-region="me-south-1">Middle East (Bahrain)</a>
                                         <a class="dropdown-item region-item" data-region="me-central-1">Middle East (UAE)</a>
                                         <a class="dropdown-item region-item" data-region="sa-east-1">South America (S&#227;o Paulo)</a>
