--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                             <span class="lbl">Developer Tools</span>
                         </span>
                         <ul>
-                            <li><a href="#section-developertools-codestar"><span class="lbl">CodeStar</span></a></li>
+                            <!--<li><a href="#section-developertools-codestar"><span class="lbl">CodeStar</span></a></li>-->
                             <li><a href="#section-developertools-codecommit"><span class="lbl">CodeCommit</span></a></li>
                             <li><a href="#section-developertools-codeartifact"><span class="lbl">CodeArtifact</span></a></li>
                             <li><a href="#section-developertools-codebuild"><span class="lbl">CodeBuild</span></a></li>
@@ -784,7 +784,7 @@
                                             <tr>
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
-                                                    <a href="#section-developertools-codestar" style="font-weight: 600;">CodeStar</a><br />
+                                                    <!--<a href="#section-developertools-codestar" style="font-weight: 600;">CodeStar</a><br />-->
                                                     <a href="#section-developertools-codecommit" style="font-weight: 600;">CodeCommit</a><br />
                                                     <a href="#section-developertools-codeartifact" style="font-weight: 600;">CodeArtifact</a><br />
                                                     <a href="#section-developertools-codebuild" style="font-weight: 600;">CodeBuild</a><br />
@@ -1723,7 +1723,7 @@
         <script src="js/services/quicksight.js"></script>
         <script src="js/services/xray.js"></script>
         <script src="js/services/lightsail.js"></script>
-        <script src="js/services/codestar.js"></script>
+        <!--<script src="js/services/codestar.js"></script>-->
         <script src="js/services/lakeformation.js"></script>
         <script src="js/services/managedblockchain.js"></script>
         <script src="js/services/qldb.js"></script>
