Soft deprecate CodeCommit

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                         </span>
                         <ul>
                             <!--<li><a href="#section-developertools-codestar"><span class="lbl">CodeStar</span></a></li>-->
-                            <li><a href="#section-developertools-codecommit"><span class="lbl">CodeCommit</span></a></li>
+                            <!--<li><a href="#section-developertools-codecommit"><span class="lbl">CodeCommit</span></a></li>-->
                             <li><a href="#section-developertools-codeartifact"><span class="lbl">CodeArtifact</span></a></li>
                             <li><a href="#section-developertools-codebuild"><span class="lbl">CodeBuild</span></a></li>
                             <li><a href="#section-developertools-codedeploy"><span class="lbl">CodeDeploy</span></a></li>
@@ -785,7 +785,7 @@
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
                                                     <!--<a href="#section-developertools-codestar" style="font-weight: 600;">CodeStar</a><br />-->
-                                                    <a href="#section-developertools-codecommit" style="font-weight: 600;">CodeCommit</a><br />
+                                                    <!--<a href="#section-developertools-codecommit" style="font-weight: 600;">CodeCommit</a><br />-->
                                                     <a href="#section-developertools-codeartifact" style="font-weight: 600;">CodeArtifact</a><br />
                                                     <a href="#section-developertools-codebuild" style="font-weight: 600;">CodeBuild</a><br />
                                                     <a href="#section-developertools-codedeploy" style="font-weight: 600;">CodeDeploy</a><br />
